# avr-size2

./: README.md
source/: CMakeLists.txt  avrNameList.h  main.c
source/windows/: exe.rc
